Make more changes for Java 8 compatibility